--- a/WatchDoggo/packages.config
+++ b/WatchDoggo/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="WebSocketSharp-netstandard" version="1.0.1" targetFramework="net472" />
 </packages>
