--- a/WatchDoggo/WatchDoggo.csproj
+++ b/WatchDoggo/WatchDoggo.csproj
@@ -75,11 +75,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extension.cs" />
-    <Compile Include="Forms\Configuration.cs">
+    <Compile Include="Forms\Cutoff.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Configuration.Designer.cs">
-      <DependentUpon>Configuration.cs</DependentUpon>
+    <Compile Include="Forms\Cutoff.Designer.cs">
+      <DependentUpon>Cutoff.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
@@ -102,8 +102,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
-    <EmbeddedResource Include="Forms\Configuration.resx">
-      <DependentUpon>Configuration.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Cutoff.resx">
+      <DependentUpon>Cutoff.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
